--- a/transitions.html
+++ b/transitions.html
@@ -13,10 +13,10 @@
             border: 2px solid tomato;
             background-color: bisque;
             /* transition: width 5s linear 3s, background-color 5s ease-in 2s; */
-            transition: transform 3s, border-radius 3s;
+            transition: background-color 3s,transform 3s, border-radius 3s;
         }
         .box:hover{
-           transform: rotate(45deg) scale(1.5) translateX(150px);
+           transform: rotate(60deg) scale(1.5) translateX(150px);
            border-radius: 50px;
             /* width: 300px; */
             background-color: rgb(92, 237, 7);
