--- a/cricket.html
+++ b/cricket.html
@@ -9,6 +9,10 @@
     .field{
         border: 1px solid green;
         height: 550px;
+        background-image: url(/wp3049846.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: bottom;
     }
     .bat{
         transition: transform .1s ease-in;
