--- a/cricket.html
+++ b/cricket.html
@@ -9,7 +9,7 @@
     .field{
         border: 1px solid green;
         height: 550px;
-        background-image: url(/wp3049846.jpg);
+        background-image: url(wp3049846.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-position: bottom;
@@ -36,7 +36,8 @@
         
 
     }
-       
+       .audio{
+       }
 
 
 </style>
