responsive for phone

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gears</title>
     <link rel="stylesheet" href="influencer.css">
-
+    <script src="https://kit.fontawesome.com/22be1b8c3d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,8 +19,8 @@
                 <li>Products</li>
                 <li>Sign-up</li>
                 <li>Log in</li>
-                <li> Search</li>
-                <li> Cart</li>
+                <li> <i class="fa-solid fa-magnifying-glass"></i></i></li>
+                <li> <i class="fa-solid fa-cart-shopping"></i></li>
             </ul>
         </nav>
         <section class="banner-container">
@@ -30,7 +30,7 @@
                     Influencer</h3>
                 <p class="banner-detail">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>vestibulum sed
                     scelerisque eros. Lectus faucibus. </p>
-                <button class="btn-primary">Prebook Now →</button>
+                <button class="btn-primary">Prebook Now <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="banner-photo">
                 <img src="images/main-camera.png" alt="">
@@ -119,7 +119,7 @@
 
 
             </div>
-            <div class="see-more">See More</div>
+            <div class="see-more">See More <i class="fa-solid fa-arrow-right"></i></div>
         </section>
 
         <section class="Featured-container">
@@ -129,7 +129,7 @@
                 <h1 class="featured-title">Featured products at one place</h1>
                 <p class="details">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
                     officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                <button class="btn-primary">Join Now </button>
+                <button class="btn-primary">Join Now<i class="fa-solid fa-arrow-right"></i> </button>
             </div>
 
         </section>
@@ -141,10 +141,10 @@
     <h3 class="footer-title"> Influencer Products</h3>
     <p class="copyright"> Copyright © 2020  influencer products <br>all rights reserved</p>
     <div class="font-awesome">
-        <a href="">Insta</a>
-        <a href="">facebook</a>
-        <a href="">twitter</a>
-        <a href=""> Youtube</a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-twitter"></i></a>
+        <a href=""> <i class="fa-brands fa-youtube"></i></a>
     </div>
 </footer>
 </body>
